no experience intro added

--- a/slides/intro_all.html
+++ b/slides/intro_all.html
@@ -11,8 +11,8 @@
   <body>
     <textarea id="source">
 
-background-image: url(logos/whiterose_dtp.png)
-background-position: 90% 20%
+background-image: url(../logos/whiterose_dtp.png)
+background-position: 7% 50%
 background-size: 300px
 
 
@@ -27,7 +27,7 @@ class: inverse
 
 # Introduction to Reproducibility in R
 
-## Emma Rand, emma.rand@york.ac.uk 
+## Emma Rand 
 
 ### University of York: 2020-03-19
 
@@ -82,9 +82,9 @@ Made with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xarin
 ## 1030 Parallel Sessions  
 .pull-left[  
 [For those without experience in R](no_experience_intro.html)  
-* Introduction to R  
-* Project based approach  
-* Stuff from rbs slides  
+* Finding your way round RStudio  
+* Typing in data, doing some calculations on it, plotting it  
+* Understanding the manual  
 ]
 .pull-right[
 [For those with experience in R]()  
@@ -99,8 +99,10 @@ Made with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xarin
 ## 1135 Parallel Sessions  
 .pull-left[   
 [For those without experience in R](no_experience_intro.html)  
-* Stuff from rbs slides  
-* more stuff
+* Importing data: working directories and paths  
+* Summarising and visualising with the [`tidyverse`](https://www.tidyverse.org/)  
+* Installing and loading packages
+
 ]
 .pull-right[ 
 [For those with experience in R]()  
@@ -110,13 +112,14 @@ Made with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xarin
 
 ## 1315 R Markdown for Reproducible Reports  
 [R Markdown fundamentals]()  
+* Project based approach    
 * ...  
 * ...  
-* ...  
-
-## 1445 Coffee in the Atrium  
 ---
 # Workshop overview
+
+## 1445 Coffee in the Atrium  
+
 ## 1505 R Markdown for Reproducible Reports
 [More advanced markdown]()  
 * bbb
