--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="author" content="Emma Rand" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
-    <link rel="stylesheet" href="..\css_files\emma.css" type="text/css" />
-    <link rel="stylesheet" href="..\css_files\emma-fonts.css" type="text/css" />
+    <link rel="stylesheet" href="css_files\emma.css" type="text/css" />
+    <link rel="stylesheet" href="css_files\emma-fonts.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
@@ -16,11 +16,11 @@
 # Workshop overview
 
 ## Introduction and Principles of reproducibility  
-[Introduction and Principles of reproducibility](intro_all.html)
+[Introduction and Principles of reproducibility](slides/intro_all.html)
 
 ## Parallel Sessions  
 .pull-left[  
-[For those without experience in R](no_experience_intro.html) 
+[For those without experience in R](slides/no_experience_intro.html) 
 ]
 .pull-right[
 [For those with experience in R]()  
