--- a/slides/experience_intro.html
+++ b/slides/experience_intro.html
@@ -1,46 +1,85 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
   <head>
-    <title>An Introduction to Reproducible Analyses in R</title>
+    <title>An Introduction to Reproducible Analyses in R: With previous experience.</title>
     <meta charset="utf-8" />
     <meta name="author" content="Emma Rand" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css_files\emma.css" type="text/css" />
-    <link rel="stylesheet" href="css_files\emma-fonts.css" type="text/css" />
+    <link rel="stylesheet" href="..\css_files\emma.css" type="text/css" />
+    <link rel="stylesheet" href="..\css_files\emma-fonts.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
 
 
 
-# Workshop overview
-
-## Introduction and Principles of reproducibility  
-[Introduction and Principles of reproducibility](slides/intro_all.html)
-
-## Parallel Sessions  
-.pull-left[  
-[For those without experience in R](slides/no_experience_intro.html) 
-]
-.pull-right[
-[For those with experience in R]()  
-
-]
 
 
-## R Markdown for Reproducible Reports  
-[R Markdown for Reproducible Reports]()  
-  
----
+
+
+
+
+
 class: inverse
 
-# Introduction to Reproducibility in R
+# Introduction to Reproducibility in R 
 
-## Emma Rand 
+## For those with previous experience.
+
+### Emma Rand 
 
 ### University of York: 2020-03-19
-&lt;br&gt;
+
+.footnote[
+Made with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xaringan))  
+
 &lt;a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"&gt;&lt;img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /&gt;&lt;/a&gt;&lt;br /&gt;&lt;span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"&gt;White Rose BBSRC Doctoral Training Partnership (DTP) in Mechanistic Biology Analytics 1: Introduction to reproducible analyses in R&lt;/span&gt; by &lt;span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName"&gt;Emma Rand&lt;/span&gt; is licensed under a &lt;a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"&gt;Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License&lt;/a&gt;.
+]
+
+
+---
+background-image: url(../pics/tidyverse_logo.png)
+background-position: 100% 0%
+background-size: 180px
+
+# Overview
+
+There are three sections. Those with least experience should start with the first but more experienced users might start at 3 or 4.
+
+1. [Using RStudio projects](experience_rs_projects.html). How to organise your work in a logical, consistent and reproducible way using RStudio Projects, appropriate directory structures and portable code. It will set you up for later sections.
+
+2. [Tidying data and the tidyverse including the pipe.]()
+
+3. [Advanced Data Import]()
+
+3. [Formatting figures]()
+---
+# References
+
+&lt;a name=bib-xaringan&gt;&lt;/a&gt;[Xie, Y.](#cite-xaringan) (2019).
+_xaringan: Presentation Ninja_. R package version 0.12. URL:
+[https://CRAN.R-project.org/package=xaringan](https://CRAN.R-project.org/package=xaringan).
+
+
+
+---
+
+class: inverse
+
+Emma Rand 
+
+emma.rand@york.ac.uk
+
+Twitter: [@er13_r](https://twitter.com/er13_r) 
+
+github: [3mmaRand](https://github.com/3mmaRand)
+
+blog: https://buzzrbeeline.blog/
+&lt;br&gt;
+
+.footnote[
+&lt;a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"&gt;&lt;img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /&gt;&lt;/a&gt;&lt;br /&gt;&lt;span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"&gt;White Rose BBSRC Doctoral Training Partnership (DTP) in Mechanistic Biology Analytics 1: Introduction to reproducible analyses in R&lt;/span&gt; by &lt;span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName"&gt;Emma Rand&lt;/span&gt; is licensed under a &lt;a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"&gt;Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License&lt;/a&gt;.
+]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
