--- a/slides/no_experience_intro.html
+++ b/slides/no_experience_intro.html
@@ -12,10 +12,6 @@
   <body>
     <textarea id="source">
 
-background-image: url(../logos/whiterose_dtp.png)
-background-position: 7% 50%
-background-size: 300px
-
 
 
 
@@ -26,9 +22,11 @@ background-size: 300px
 
 class: inverse
 
-# Introduction to Reproducibility in R &lt;BR&gt; For those without previous experience.
+# Introduction to Reproducibility in R 
 
-## Emma Rand 
+## For those without previous experience.
+
+### Emma Rand 
 
 ### University of York: 2020-03-19
 
@@ -648,7 +646,7 @@ Mapping fill to variable means the colour is variable - you get a different colo
 Can you use the manual to put the bars next to each other?
 .pull-right[
 .footnote[
-&lt;span style=" font-weight: bold;    color: white !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #333880 !important;" &gt;Extra exercise:&lt;/span&gt;  Can you use the manual to change to colour of the lines around each bar to black?]]
+&lt;span style=" font-weight: bold;    color: white !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #285169 !important;" &gt;Extra exercise:&lt;/span&gt;  Can you use the manual to change to colour of the lines around each bar to black?]]
 --
 
 
@@ -667,7 +665,7 @@ ggplot(data = nest_data, aes(x = n, y = freq)) +
 ## Plotting
 
 
-&lt;span style=" font-weight: bold;    color: white !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #333880 !important;" &gt;Extra exercise:&lt;/span&gt;  Can you use the manual to change to colour of the lines around each bar to black?
+&lt;span style=" font-weight: bold;    color: white !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #285169 !important;" &gt;Extra exercise:&lt;/span&gt;  Can you use the manual to change to colour of the lines around each bar to black?
 
 .pull-left[
 
@@ -734,7 +732,7 @@ ggplot(data = nest_data,
 
 .pull-right[
 .footnote[
-&lt;span style=" font-weight: bold;    color: white !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #333880 !important;" &gt;Extra exercise:&lt;/span&gt;  Look up `scale_x_discrete` in the manual and work out how to change "n" to "Number of Males"]
+&lt;span style=" font-weight: bold;    color: white !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #285169 !important;" &gt;Extra exercise:&lt;/span&gt;  Look up `scale_x_discrete` in the manual and work out how to change "n" to "Number of Males"]
 ]
 
 ---
@@ -750,10 +748,11 @@ ggplot(data = nest_data,
   scale_x_discrete(expand = c(0, 0),
 *                  name = "Number of Males") +
   scale_y_continuous(expand = c(0, 0),
-*                    name = "Number of Nests")
+                     name = "Number of Nests") 
 ```
 
 ![](no_experience_intro_files/figure-html/unnamed-chunk-26-1.png)&lt;!-- --&gt;
+
 ---
 
 class: inverse,
@@ -1189,10 +1188,8 @@ pigeon2 %&gt;%
 
 
 This can be read as:  
-  - take pigeon2  
-  - and then  
-  - group it by population  
-  - and then  
+  - take pigeon2 and then  
+  - group it by population and then  
   - summarise it by calculating the mean  
 
 i.e., the mean is done for each population.
@@ -1230,9 +1227,9 @@ pigeon2 %&gt;%
 ```
 
 .footnote[
-&lt;span style=" font-weight: bold;    color: white !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #333880 !important;" &gt;Extra exercise:&lt;/span&gt;  Add a column for the standard devation
+&lt;span style=" font-weight: bold;    color: white !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #285169 !important;" &gt;Extra exercise:&lt;/span&gt;  Add a column for the standard devation
 
-&lt;span style=" font-weight: bold;    color: white !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #333880 !important;" &gt;Extra exercise:&lt;/span&gt;  Add a column for the standard error given by `\(\frac{s.d.}{\sqrt{n}}\)`
+&lt;span style=" font-weight: bold;    color: white !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #285169 !important;" &gt;Extra exercise:&lt;/span&gt;  Add a column for the standard error given by `\(\frac{s.d.}{\sqrt{n}}\)`
 
 ]
 ---
@@ -1271,25 +1268,25 @@ background-size: 180px
 
 ## Plotting multi-group data
 
-.pull-left[
-
 
 ```r
 ggplot(data = pigeon2, aes(x = distance)) +
-  geom_histogram(bins = 10,
+* geom_histogram(bins = 10,
                  col = "black") +
-  xlab("Interorbital distance (mm)")
+  scale_x_continuous(name = "Interorbital distance (mm)")
 ```
+.pull-left[
 
-![](no_experience_intro_files/figure-html/unnamed-chunk-41-1.png)&lt;!-- --&gt;
+![](no_experience_intro_files/figure-html/unnamed-chunk-42-1.png)&lt;!-- --&gt;
 ]
 
 .pull-right[
-&lt;br&gt;
-&lt;br&gt;
-&lt;br&gt;
-&lt;br&gt;
-Plots the whole data set without separating the populations
+
+The geom we have used this time is a `geom_histogram()`.
+
+`bins` is the the number of bars you get.
+
+We have the whole data set without separating the populations
 
 ]
 
@@ -1302,19 +1299,43 @@ background-size: 180px
 
 ## Plotting multi-group data
 
-### Using the `aes()`
-
-'map' the population variable with the `fill` aesthetic
+We can use the `aes()` to 'map' the population variable to the `fill` aesthetic
 
 
 ```r
 *ggplot(data = pigeon2, aes(x = distance, fill = population)) +
   geom_histogram(bins = 10, 
                  col = "black") +
-  xlab("Interorbital distance (mm)")
+  scale_x_continuous(name = "Interorbital distance (mm)")
 ```
 
-![](no_experience_intro_files/figure-html/unnamed-chunk-42-1.png)&lt;!-- --&gt;
+![](no_experience_intro_files/figure-html/unnamed-chunk-43-1.png)&lt;!-- --&gt;
+.pull-right[
+.footnote[
+&lt;span style=" font-weight: bold;    color: white !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #285169 !important;" &gt;Extra exercise:&lt;/span&gt;  Can you remember how to make the axes cross at (0,0)]
+]
+---
+background-image: url(../pics/interorbital.png)
+background-position: 100% 0%
+background-size: 180px
+
+# Working with Data 
+
+&lt;span style=" font-weight: bold;    color: white !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #285169 !important;" &gt;Extra exercise:&lt;/span&gt;  Can you remember how to make the axes cross at (0,0)
+
+
+```r
+*ggplot(data = pigeon2, aes(x = distance, fill = population)) +
+  geom_histogram(bins = 10, 
+                 col = "black") +
+  scale_x_continuous(name = "Interorbital distance (mm)",
+                     expand = c(0, 0)) +
+  scale_y_continuous(name = "Frequency",
+                     expand = c(0, 0))
+```
+
+![](no_experience_intro_files/figure-html/unnamed-chunk-44-1.png)&lt;!-- --&gt;
+
 
 ---
 background-image: url(../pics/interorbital.png)
@@ -1325,78 +1346,13 @@ background-size: 180px
 
 ## Plotting multi-group data
 
-### Using the `aes()`
-
-Aesthetics include:
-* x
-* y
-* color
-* fill
-* shape
-* size
-* alpha
-
-
----
-background-image: url(../pics/interorbital.png)
-background-position: 100% 0%
-background-size: 180px
-
-# Working with Data 
-
-## Plotting multi-group data
-
-### Changing the `geom` 
-
-From `geom_histogram()` to `geom_density()`
+`geom_density()` is another `geom` that can be used when `distance` is mapped to `x` and the y axis gives counts.
 
 
 ```r
 ggplot(data = pigeon2, aes(x = distance, fill = population)) +
 * geom_density(col = "black") +
-  xlab("Interorbital distance (mm)")
-```
-
-![](no_experience_intro_files/figure-html/unnamed-chunk-43-1.png)&lt;!-- --&gt;
-
----
-background-image: url(../pics/interorbital.png)
-background-position: 100% 0%
-background-size: 180px
-
-# Working with Data 
-
-## Plotting multi-group data
-
-### And altering the transparancy using `alpha`
-
-
-
-```r
-ggplot(data = pigeon2, aes(x = distance, fill = population)) +
-* geom_density(col = "black", alpha = 0.3) +
-  xlab("Interorbital distance (mm)")
-```
-
-![](no_experience_intro_files/figure-html/unnamed-chunk-44-1.png)&lt;!-- --&gt;
-
----
-background-image: url(../pics/interorbital.png)
-background-position: 100% 0%
-background-size: 180px
-
-# Working with Data 
-
-## Plotting multi-group data
-
-### Themes
-
-
-```r
-ggplot(data = pigeon2, aes(x = distance, fill = population)) +
-  geom_density(col = "black", alpha = 0.3) +
-  xlab("Interorbital distance (mm)") +
-* theme_classic()
+  scale_x_continuous(name = "Interorbital distance (mm)")
 ```
 
 ![](no_experience_intro_files/figure-html/unnamed-chunk-45-1.png)&lt;!-- --&gt;
@@ -1410,33 +1366,30 @@ background-size: 180px
 
 ## Plotting multi-group data
 
-### A different kind of plot
+We can alter the transparancy using `alpha`
 
-Instead of plotting the distribution, we can plot the population on the _x_-axis
-
-and the distances on the _y_-axis **as points**
-
----
-background-image: url(../pics/interorbital.png)
-background-position: 100% 0%
-background-size: 180px
-
-# Working with Data 
-
-## Plotting multi-group data
-
-### A different kind of plot
 
 
 ```r
-*ggplot(data = pigeon2, aes(x = population, y = distance)) +
-* geom_point() +
-  xlab("Population") +
-  ylab("Interorbital distance (mm)")
+ggplot(data = pigeon2, aes(x = distance, fill = population)) +
+* geom_density(col = "black", alpha = 0.3) +
+  scale_x_continuous(name = "Interorbital distance (mm)")
 ```
 
 ![](no_experience_intro_files/figure-html/unnamed-chunk-46-1.png)&lt;!-- --&gt;
 
+---
+background-image: url(../pics/interorbital.png)
+background-position: 100% 0%
+background-size: 180px
+
+# Working with Data 
+
+## Plotting multi-group data
+
+We often want to format figures for inclusion in reports. 
+
+All [elements can be customised individually](https://ggplot2.tidyverse.org/reference/theme.html) but `theme_classic()` takes care of many options you are likely to desire.
 
 ---
 background-image: url(../pics/interorbital.png)
@@ -1447,19 +1400,59 @@ background-size: 180px
 
 ## Plotting multi-group data
 
-### Another  plot
-
-
 
 ```r
-ggplot(data = pigeon2, aes(x = population, y = distance))  +
-* geom_violin() +
-  xlab("Population") +
-  ylab("Interorbital distance (mm)") + 
-  theme_classic()
+ggplot(data = pigeon2, aes(x = distance, fill = population)) +
+  geom_density(col = "black", alpha = 0.3) +
+  scale_x_continuous(name = "Interorbital distance (mm)") +
+* theme_classic()
 ```
 
 ![](no_experience_intro_files/figure-html/unnamed-chunk-47-1.png)&lt;!-- --&gt;
+
+---
+background-image: url(../pics/interorbital.png)
+background-position: 100% 0%
+background-size: 180px
+
+# Working with Data 
+
+## Plotting multi-group data
+
+### A different kind of plot
+
+.pull-left[
+![](no_experience_intro_files/figure-html/unnamed-chunk-48-1.png)&lt;!-- --&gt;
+]
+
+.pull-right[
+
+Note: We need to change the `aes()` as well as the `geom` because this figure has population on the x axis.
+
+]
+---
+# Working with Data 
+
+## Plotting multi-group data
+
+
+```r
+ggplot(data = pigeon2, aes(x = population, y = distance)) + 
+  geom_boxplot() +                            
+  scale_x_discrete(name = "Population") +
+  scale_y_continuous(name = "Interorbital distance (mm)",
+                   expand = c(0, 0),
+                   limits = c(0, 15)) +
+  theme_classic()
+```
+
+.pull-left[
+![](no_experience_intro_files/figure-html/unnamed-chunk-50-1.png)&lt;!-- --&gt;
+]
+.pull-right[
+.footnote[
+&lt;span style=" font-weight: bold;    color: white !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #285169 !important;" &gt;Extra exercise:&lt;/span&gt;  Can you (gratuitously) colour the boxes by population too?]
+]
 
 ---
 # References
@@ -1480,17 +1473,11 @@ _xaringan: Presentation Ninja_. R package version 0.12. URL:
 
 
 ---
-background-image: url(pics/Royal_Society_of_Biology.png)
-background-position: 0.5% 0.5%
-background-size: 350px
 
 class: inverse
 
 # Congratulations! Keep practising!
-&lt;br&gt;
-&lt;br&gt;
-&lt;br&gt;
-&lt;br&gt;
+
 Emma Rand 
 
 emma.rand@york.ac.uk
