minor update to index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 [For those without experience in R](slides/no_experience_intro.html) 
 ]
 .pull-right[
-[For those with experience in R]()  
+[For those with experience in R](slides/experience_intro.html)  
 
 ]
 
