tidying for those with experience mainly completed (just case study to complete)

--- a/slides/experience_intro.html
+++ b/slides/experience_intro.html
@@ -38,17 +38,17 @@ Made with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xarin
 
 
 ---
-background-image: url(../pics/tidyverse_logo.png)
-background-position: 100% 0%
+background-image: url(../pics/tidyverse.png)
+background-position: 95% 95%
 background-size: 180px
 
 # Overview
 
-There are three sections. Those with least experience should start with the first but more experienced users might start at 3 or 4.
+There are four sections. Those with least experience should start with the first but more experienced users might start at 3 or 4.
 
 1. [Using RStudio projects](experience_rs_projects.html). How to organise your work in a logical, consistent and reproducible way using RStudio Projects, appropriate directory structures and portable code. It will set you up for later sections.
 
-2. [Tidying data and the tidyverse including the pipe.]()
+2. [Tidying data and the tidyverse including the pipe.](experience_data_tidying.html)
 
 3. [Advanced Data Import]()
 
