--- a/slides/experience_rs_projects.html
+++ b/slides/experience_rs_projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
   <head>
-    <title>An Introduction to Reproducible Analyses in R: With previous experience.</title>
+    <title>An Introduction to Reproducible Analyses in R: RStudio Projects.</title>
     <meta charset="utf-8" />
     <meta name="author" content="Emma Rand" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
@@ -42,7 +42,7 @@ Made with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xarin
 
 ## Aims
 
-The aim of this section is to show you how to organise your work in a logical, consistent and reproducible way using RStudio Projects, appropriate directory structures and portable code. It will set you up for the [Tidying data and the tidyverse including the pipe]() and [Advanced Data Import]() sections.
+The aim of this section is to show you how to organise your work in a logical, consistent and reproducible way using RStudio Projects, appropriate directory structures and portable code. It will set you up for the [Tidying data and the tidyverse including the pipe](experience_data_tidying.Rmd) and [Advanced Data Import]() sections.
 
 ## Learning outcomes 
 
@@ -252,9 +252,6 @@ _xaringan: Presentation Ninja_. R package version 0.12. URL:
 
 
 ---
-background-image: url(pics/Royal_Society_of_Biology.png)
-background-position: 0.5% 0.5%
-background-size: 350px
 
 class: inverse
 
