--- a/slides/intro_all.html
+++ b/slides/intro_all.html
@@ -88,8 +88,9 @@ Made with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xarin
 ]
 .pull-right[
 [For those with experience in R]()  
-* Advanced data import  
+* RStudio projects and writing files.  
 * Advanced data tidying  
+* Advanced data import  
 
 ]
 ## 1115 Coffee in the Atrium  
@@ -112,7 +113,6 @@ Made with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xarin
 
 ## 1315 R Markdown for Reproducible Reports  
 [R Markdown fundamentals]()  
-* Project based approach    
 * ...  
 * ...  
 ---
