--- a/slides/experience_data_import.html
+++ b/slides/experience_data_import.html
@@ -212,7 +212,7 @@ readLines(file, n = 2)
 ## [1] "Code\tDescription" "A00\t\"Cholera\""
 ```
 
-It is not uncommon for people to use file extensions that are misleading so don't assume it is what it says on the tin 🕵️‍♀️
+It is not uncommon for people to use file extensions that are misleading so don't assume it is what it says on the tin 🕵️‍♂️
 
 ---
 # Locally stored special formats.
@@ -479,7 +479,280 @@ test &lt;- read_html(url) %&gt;%
 ---
 # APIs
 
-## jasonlite
+## Overview
+
+There are many data repositories online and you may have used a search page to retrieve data for download.   
+That search page is designed for humans to interface with the data repository.
+
+--
+
+An Applications Programming Interface (API) allows a data repository or program to be accessed programmatically.  
+
+This is especially useful when your data updates frequently.
+
+--
+
+## Packages
+
+Many packages have been written that simplify your use of an API&lt;sup&gt;1&lt;/sup&gt;. You may have used these without knowing. Using an API that has an already has a package is relatively simple.
+
+
+.footnote[
+1. Searching for API on this [list of CRAN packages](https://cran.r-project.org/web/packages/available_packages_by_name.html) will give you an idea.
+]
+
+---
+# APIs
+
+## Packages
+
+Just a few examples are:
+
+* `RGoogleAnalytics` for the the Google Analytics API
+* `rentrez` for the NCBI's 'EUtils' API, allowing users to search databases like 'GenBank'
+*  `aRxiv`	Interface to the arXiv API allowing you to seach the preprints database.
+* `CytobankAPI`	to access the Cytobank API
+* Many packages on [Bioconductor](https://www.bioconductor.org/) and [ROpenSci](https://ropensci.org/)
+
+--
+
+👀 Search for an existing package to access an API before you start with the methods shown on the next few slides!  
+
+--
+
+This is a example of how to connect to an API to get data when the API doesn't have a package for R. It is a brief introduction but if is it something you want to do you will undoubtedly need to learn more.
+---
+# APIs
+
+## Terminology
+
+Interaction with an API comprises a request (what you send) and a response.  
+
+--
+
+The most common type of request is carried out with the GET HTTP method&lt;sup&gt;1&lt;/sup&gt;  
+
+.footnote[
+1. Other HTTP methods can be used for requests such as POST, PUT, DELETE
+]
+
+--
+
+In R `httr` is one package that allows you create requests
+
+---
+# APIs
+
+## Terminology
+
+An API requests consists of:
+  
+* a URL  
+  &lt;span style="     border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #D0DEE6 !important;" &gt;http://gtr.rcuk.ac.uk/search/&lt;/span&gt;project?term=virus&amp;page=1&amp;fetchSize=100
+
+--
+
+* an 'endpoint' following by a `?`. An endpoint is a dataset provided by the API.  
+  http://gtr.rcuk.ac.uk/search/&lt;span style="     border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #D0DEE6 !important;" &gt;project&lt;/span&gt;?term=virus&amp;page=1&amp;fetchSize=100
+
+--
+  
+  Many APIs have multiple endpoints.  
+
+--
+
+* Endpoints are queried with 'parameters' separtated by `&amp;` which are defined in the API documentation  
+  http://gtr.rcuk.ac.uk/search/project?&lt;span style="     border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #D0DEE6 !important;" &gt;term=virus&amp;amp;page=1&amp;amp;fetchSize=100&lt;/span&gt;
+
+--
+
+JavaScript Object Notification (JSON) and Extensible Markup Language (XML) are the most common answer formats.
+
+JSON data is often handled with the `jsonlite` package
+
+
+---
+# APIs
+
+## Example
+
+
+We are going to query the [UK Research and Innovation](https://www.ukri.org/) [Gateway to Research](https://gtr.ukri.org/)  which enables users to search and analyse information about publicly funded research. 
+
+--
+
+We will retrieve BBSRC research grants that will start in 2020 about viruses.
+
+--
+
+The funding council, type of grant, start year and topic are all parameters we will need to send in the request.
+
+--
+
+
+🎬 Load the packages
+
+
+```r
+library(httr)
+library(jsonlite)
+```
+
+--
+
+We need to:  
+1. Make a "GET" request to the API to pull raw data into R  
+2. Parse that data from its raw form (JSON) into a usable format
+
+---
+# APIs
+
+## Constructing the query
+
+🎬 Create variables for the URL, the endpoint and the parameters:
+
+
+```r
+base &lt;- "http://gtr.rcuk.ac.uk/search/"
+endpoint &lt;- "project"
+page &lt;- 1
+fetchsize &lt;- 100
+term &lt;- "virus"
+```
+
+--
+
+We are searching the `project` data resource; other possible endpoints include person and publication.
+
+`fetchSize` and `page` give the number of results per page returned and which page should be returned. Typically, we need to write a loop to retrieve all the results. 
+
+--
+
+For simplicity, I have used a search that returns less that a one page of results.
+
+---
+# APIs
+
+## Constructing the query
+
+Specifying the funding council, type of grant and year is by passing id codes to the `selectedFacets` parameter. 
+
+--
+
+The id codes are obtained from the documentation or by running a simple query and examining the resulting object.
+
+--
+
+🎬 Create variables for the variables for appropriate `selectedFacets` id codes:
+
+```r
+# these are the id codes that filter the results by:
+# "Project category", 
+research &lt;- "Y2F0fFJlc2VhcmNoIEdyYW50fHN0cmluZw=="
+# "Funder" and
+bbsrc &lt;- "ZnVuZGVyfEJCU1JDfHN0cmluZw=="
+# "Start year
+y2020 &lt;- "c3RhcnR8MTU3NzgzNjgwMDAwMF8xNjA5NDU5MTk5MDU5fHJhbmdl"
+```
+
+---
+# APIs
+
+## Constructing the query
+
+The id code include some special characters that encoded as % plus a two-digit hexadecimal representation (known as percent coding). You may have seen browsers replace spaces with `%20` - this one example. 
+
+--
+
+The ids must be in a list separted by commas, and then encoded.
+
+--
+
+🎬 Create a variable for the selectedFacets paramter by pasting the codes together separated by a comma, then encoding:
+
+```r
+selectedFacets &lt;- URLencode(paste(research,
+                                  bbsrc, 
+                                  y2020, 
+                                  sep=","),
+                            reserved = TRUE)
+```
+
+---
+# APIs
+
+## Constructing the query
+
+🎬 Paste all parts into the same query, adding `?` and `&amp;` where required:
+
+```r
+call1 &lt;- paste(base,endpoint,"?",
+               "term=", term,"&amp;",
+               "page=", page,"&amp;",
+               "fetchSize=", fetchsize,"&amp;",
+               "selectedFacets=", selectedFacets,
+               sep="")
+```
+
+--
+
+
+🎬 Check the result:
+.scroll-output-width[
+
+```r
+call1
+```
+
+```
+## [1] "http://gtr.rcuk.ac.uk/search/project?term=virus&amp;page=1&amp;fetchSize=100&amp;selectedFacets=Y2F0fFJlc2VhcmNoIEdyYW50fHN0cmluZw%3D%3D%2CZnVuZGVyfEJCU1JDfHN0cmluZw%3D%3D%2Cc3RhcnR8MTU3NzgzNjgwMDAwMF8xNjA5NDU5MTk5MDU5fHJhbmdl"
+```
+]
+---
+# APIs
+
+## Running the query
+
+```r
+# httr::GET makes the request
+results &lt;- GET(call1)
+```
+
+check the request was successful
+
+
+```r
+results$status_code
+```
+
+```
+## [1] 200
+```
+
+
+```r
+data &lt;- results %&gt;% content("text") %&gt;% fromJSON()
+```
+
+
+
+```r
+data$searchResult$resourceHitCount
+```
+
+```
+##       resource count
+## 1      project    24
+## 2 organisation     2
+## 3     outcomes  4718
+## 4       person  2409
+## 5  publication  6307
+```
+
+not covered: authentication. done in the get
+Making a get request
+typically you need an API password, an API username or both
+
 
 ## packages
 
