--- a/slides/experience_data_import.html
+++ b/slides/experience_data_import.html
@@ -212,7 +212,7 @@ readLines(file, n = 2)
 ## [1] "Code\tDescription" "A00\t\"Cholera\""
 ```
 
-It is not uncommon for people to use file extensions that are misleading so don't assume it is what it says on the tin 🕵️‍♂️
+It is not uncommon for people to use file extensions that are misleading so don't assume it is what it says on the tin 🕵
 
 ---
 # Locally stored special formats.
@@ -742,11 +742,11 @@ data$searchResult$resourceHitCount
 
 ```
 ##       resource count
-## 1      project    24
+## 1      project    27
 ## 2 organisation     2
-## 3     outcomes  4718
-## 4       person  2409
-## 5  publication  6307
+## 3     outcomes  4723
+## 4       person  2420
+## 5  publication  6617
 ```
 
 not covered: authentication. done in the get
