'experience' overview update

--- a/slides/experience_intro.html
+++ b/slides/experience_intro.html
@@ -44,15 +44,14 @@ background-size: 180px
 
 # Overview
 
-There are four sections. Those with least experience should start with the first but more experienced users might start at 3 or 4.
+There are three sections. Those with least experience should start with the first but more experienced users might start at 2 or 3.
 
 1. [Using RStudio projects](experience_rs_projects.html). How to organise your work in a logical, consistent and reproducible way using RStudio Projects, appropriate directory structures and portable code. It will set you up for later sections.
 
-2. [Tidying data and the tidyverse including the pipe.](experience_data_tidying.html)
+2. [Tidying data and the tidyverse including the pipe.](experience_data_tidying.html). How to use the tidyverse (Wickham Averick, et al., 2019) including the pipe, '%&gt;%', and do some commonly applied data tidying operations. Note: The Advanced Data Import section will make use of tidyverse methods and generate tidy data structures.
 
-3. [Advanced Data Import](experience_data_import.html)
+3. [Advanced Data Import](experience_data_import.html). The aim of this session is to strength your ability to import your own data files regardless of the formatting and to introduce you to some of the other ways to import data such as through web scraping and via APIs.
 
-3. [Formatting figures]()
 ---
 # References
 
