--- a/slides/01_intro_and_principles_of_repro.html
+++ b/slides/01_intro_and_principles_of_repro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
+<html lang="" xml:lang="">
   <head>
-    <title>An Introduction to Reproducible Analyses in R</title>
+    <title>Introduction and Principles of reproducibility.</title>
     <meta charset="utf-8" />
     <meta name="author" content="Emma Rand" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
@@ -10,35 +10,25 @@
   </head>
   <body>
     <textarea id="source">
+class: center, middle, inverse, title-slide
 
-background-image: url(../logos/whiterose_dtp.png)
-background-position: 7% 50%
-background-size: 300px
-
-
-
-
-
-
-
-
-
-class: inverse
-
-# Introduction to Reproducibility in R
-
-### Emma Rand 
-
-### University of York: 2020-03-19
-
-.footnote[
-Made with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xaringan))  
-
-&lt;a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"&gt;&lt;img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /&gt;&lt;/a&gt;&lt;br /&gt;&lt;span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"&gt;White Rose BBSRC Doctoral Training Partnership (DTP) in Mechanistic Biology Analytics 1: Introduction to reproducible analyses in R&lt;/span&gt; by &lt;span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName"&gt;Emma Rand&lt;/span&gt; is licensed under a &lt;a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"&gt;Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License&lt;/a&gt;.
-]
+# Introduction and Principles of reproducibility.
+## White Rose BBSRC DTP Training: An Introduction to Reproducible Analyses in R.
+### Emma Rand
+### University of York, UK
 
 ---
-# What this workshop is and is not
+
+
+
+
+
+
+
+
+
+
+# What this training is and is not
 
 .pull-left[
 
@@ -71,62 +61,49 @@ Made with xaringan &lt;a name=cite-xaringan&gt;&lt;/a&gt;([Xie, 2019](#bib-xarin
 
 
 ---
-# Workshop overview
+# Programme overview
 
-## 1000 Introduction and Principles of reproducibility  
-* Rationale for scripting
-* Why R?
-* Organisation of data  
-* Organisation of analyses
+This programme comprises several modules lasting from 30 minutes to 2 hours. The selection of modules you undertake will depend on your previous experience.
 
-## 1030 Parallel Sessions  
-.pull-left[  
-[For those without experience in R](no_experience_intro.html)  
-* Finding your way round RStudio  
-* Typing in data, doing some calculations on it, plotting it  
-* Understanding the manual  
-]
-.pull-right[
-[For those with experience in R]()  
-* RStudio projects and writing files.  
-* Advanced data tidying  
-* Advanced data import  
+1. [Introduction and Principles of reproducibility](slides/01_intro_and_principles_of_repro.html)  
+   Expected audience: Everyone
+   * Rationale for scripting
+   * Why R?
+   * Organisation of data  
+   * Organisation of analyses
 
-]
-## 1115 Coffee in the Atrium  
+2. [Introduction to R and working with data](slides/02_intro_to_r_and_working_with_data.html)  
+   Expected audience: Those without previous experience
+   * Finding your way round RStudio  
+   * Typing in data, doing some calculations on it, plotting it  
+   * Understanding the manual  
+   * Importing data: working directories and paths  
+   * Summarising and visualising with the [`tidyverse`](https://www.tidyverse.org/)  
+   * Installing and loading packages
+
 ---
-# Workshop overview
+# Programme overview - continued
 
-## 1135 Parallel Sessions  
-.pull-left[   
-[For those without experience in R](no_experience_intro.html)  
-* Importing data: working directories and paths  
-* Summarising and visualising with the [`tidyverse`](https://www.tidyverse.org/)  
-* Installing and loading packages
 
-]
-.pull-right[ 
-[For those with experience in R]()  
-* Formatting figures for publication  
-]
-## 1230 Lunch in the Atrium  
+3. [RStudio Projects](slides/03_rstudio_projects.html)  
+    Expected audience: Everyone
 
-## 1315 R Markdown for Reproducible Reports  
-[R Markdown fundamentals]()  
-* ...  
-* ...  
+
+
+4. [Tidying data and the tidyverse including the pipe](slides/04_tidying_data_and_the_tidyverse.html)  
+   Expected audience: For those with previous experience of R but little of 'tidy data' and the tidyverse, such as having done "Introduction to R and working with data."
+   * 
+
 ---
-# Workshop overview
-
-## 1445 Coffee in the Atrium  
-
-## 1505 R Markdown for Reproducible Reports
-[More advanced markdown]()  
-* bbb
-* mmm
-* citations, journal templates 
-
-## 1600 Close
+# Programme overview - continued   
+5. [Advanced data import](slides/05_advanced_data_import.html)  
+   Expected audience: For those with previous experience of R such as having done "Introduction to R and working with data" and "Tidying data and the tidyverse including the pipe."
+   * 
+   
+6. [R Markdown for Reproducible Reports](slides/)  
+   Expected audience: For those with previous experience of R such as having done "Introduction to R and working with data"
+   * 
+.
 ---
 background-image: url(../pics/rationale1.png)
 background-position: 50% 35%
@@ -410,35 +387,37 @@ Suppose we had just 3 individuals in each of two populations:
 ---
 # References
 
-&lt;a name=bib-Bryan2018-hl&gt;&lt;/a&gt;[Bryan, J.](#cite-Bryan2018-hl)
-(2018). "Excuse Me, Do You Have a Moment to Talk About Version
-Control?" In: _Am. Stat._ 72.1, pp. 20-27.
+&lt;a name=bib-Bryan2018-hl&gt;&lt;/a&gt;[Bryan, J.](#cite-Bryan2018-hl) (2018).
+"Excuse Me, Do You Have a Moment to Talk About Version Control?" In:
+_Am. Stat._ 72.1, pp. 20-27.
 
-&lt;a name=bib-Codd1990-th&gt;&lt;/a&gt;[Codd, E. F.](#cite-Codd1990-th)
-(1990). _The Relational Model for Database Management: Version 2_.
-Boston, MA, USA: Addison-Wesley Longman Publishing Co, Inc.
+&lt;a name=bib-Codd1990-th&gt;&lt;/a&gt;[Codd, E. F.](#cite-Codd1990-th) (1990).
+_The Relational Model for Database Management: Version 2_. Boston, MA,
+USA: Addison-Wesley Longman Publishing Co, Inc.
 
 &lt;a name=bib-Sandve2013-nd&gt;&lt;/a&gt;[Sandve, G. K, A. Nekrutenko, et
-al.](#cite-Sandve2013-nd) (2013). "Ten simple rules for
-reproducible computational research". En. In: _PLoS Comput. Biol._
-9.10, p. e1003285.
+al.](#cite-Sandve2013-nd) (2013). "Ten simple rules for reproducible
+computational research". En. In: _PLoS Comput. Biol._ 9.10, p.
+e1003285.
 
 &lt;a name=bib-Wickham2014-nl&gt;&lt;/a&gt;[Wickham, H.](#cite-Wickham2014-nl)
-(2014). "Tidy Data". In: _Journal of Statistical Software,
-Articles_ 59.10, pp. 1-23.
+(2014). "Tidy Data". In: _Journal of Statistical Software, Articles_
+59.10, pp. 1-23.
 
 &lt;a name=bib-Wilson2014-ij&gt;&lt;/a&gt;[Wilson, G, D. A. Aruliah, et
 al.](#cite-Wilson2014-ij) (2014). "Best practices for scientific
 computing". En. In: _PLoS Biol._ 12.1, p. e1001745.
 
 &lt;a name=bib-Wilson2017-cp&gt;&lt;/a&gt;[Wilson, G, J. Bryan, et
-al.](#cite-Wilson2017-cp) (2017). "Good enough practices in
-scientific computing". En. In: _PLoS Comput. Biol._ 13.6, p.
-e1005510.
+al.](#cite-Wilson2017-cp) (2017). "Good enough practices in scientific
+computing". En. In: _PLoS Comput. Biol._ 13.6, p. e1005510.
 
-&lt;a name=bib-xaringan&gt;&lt;/a&gt;[Xie, Y.](#cite-xaringan) (2019).
-_xaringan: Presentation Ninja_. R package version 0.12. URL:
-[https://CRAN.R-project.org/package=xaringan](https://CRAN.R-project.org/package=xaringan).
+---
+# Introduction to Reproducibility in R
+
+## Emma Rand &lt;br&gt; [emma.rand@york.ac.uk](mailto:emma.rand@york.ac.uk) &lt;br&gt; [@er13_r](https://twitter.com/er13_r)
+&lt;br&gt;
+&lt;a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"&gt;&lt;img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /&gt;&lt;/a&gt;&lt;br /&gt;&lt;span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"&gt;White Rose BBSRC Doctoral Training Partnership (DTP) in Mechanistic Biology Analytics 1: Introduction to reproducible analyses in R&lt;/span&gt; by &lt;span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName"&gt;Emma Rand&lt;/span&gt; is licensed under a &lt;a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"&gt;Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License&lt;/a&gt;.
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
@@ -485,9 +464,25 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     }
     deleted = true;
   });
-})();</script>
-
-<script>
+})();
+(function() {
+  "use strict"
+  // Replace <script> tags in slides area to make them executable
+  var scripts = document.querySelectorAll(
+    '.remark-slides-area .remark-slide-container script'
+  );
+  if (!scripts.length) return;
+  for (var i = 0; i < scripts.length; i++) {
+    var s = document.createElement('script');
+    var code = document.createTextNode(scripts[i].textContent);
+    s.appendChild(code);
+    var scriptAttrs = scripts[i].attributes;
+    for (var j = 0; j < scriptAttrs.length; j++) {
+      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
+    }
+    scripts[i].parentElement.replaceChild(s, scripts[i]);
+  }
+})();
 (function() {
   var links = document.getElementsByTagName('a');
   for (var i = 0; i < links.length; i++) {
@@ -496,7 +491,23 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     }
   }
 })();
-</script>
+// adds .remark-code-has-line-highlighted class to <pre> parent elements
+// of code chunks containing highlighted lines with class .remark-code-line-highlighted
+(function(d) {
+  const hlines = d.querySelectorAll('.remark-code-line-highlighted');
+  const preParents = [];
+  const findPreParent = function(line, p = 0) {
+    if (p > 1) return null; // traverse up no further than grandparent
+    const el = line.parentElement;
+    return el.tagName === "PRE" ? el : findPreParent(el, ++p);
+  };
+
+  for (let line of hlines) {
+    let pre = findPreParent(line);
+    if (pre && !preParents.includes(pre)) preParents.push(pre);
+  }
+  preParents.forEach(p => p.classList.add("remark-code-has-line-highlighted"));
+})(document);</script>
 
 <script>
 slideshow._releaseMath = function(el) {
